rnsc/tests/snapshots/error-parser-type_hints-double-missing_operand_recovers.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class @double
unexpected_token ; <- this error should be reported as well
----- STDERR -----
[E-014] Error: '@double' type hint is missing its 64-bit float
   ╭─[ test_data/rns_integration/error/parser/type_hints/double/missing_operand_recovers.rns:1:8 ]
   │
 1 │ .class @double
   │        ───┬───│ 
   │           ╰───── forces explicit double constant pool type
   │               │ 
   │               ╰─ but 64-bit float is missing
   │ 
   │ Help: Provide the value immediately after the hint:
   │       @double <double>
   │       
   │       For example:
   │       @double 3.14
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-014
───╯
[E-007] Error: unexpected identifier class body
   ╭─[ test_data/rns_integration/error/parser/type_hints/double/missing_operand_recovers.rns:2:1 ]
   │
 2 │ unexpected_token ; <- this error should be reported as well
   │ ────────┬───────  
   │         ╰───────── unexpected token
   │ 
   │ Help: Check the syntax of the class body and ensure all tokens are valid.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-007
───╯
----- JAVAP -----
not generated
