rnsc/tests/snapshots/error-parser-type_hints-double-not_f64_with_space.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class @double "not a double" ; <- has space and should be quoted in help
.super java/lang/Object
----- STDERR -----
[E-003] Error: '@double' requires a 64-bit float, but 'not a double' is not a number
   ╭─[ test_data/rns_integration/error/parser/type_hints/double/not_f64_with_space.rns:1:8 ]
   │
 1 │ .class @double "not a double" ; <- has space and should be quoted in help
   │        ───┬─── ───────┬──────  
   │           ╰──────────────────── forces explicit double constant pool type
   │                       │        
   │                       ╰──────── but 'not a double' is not a number
   │ 
   │ Help: 'not a double' is not a valid float literal.
   │       
   │       Syntax:
   │       @double <double>
   │       
   │       For example:
   │       @double 3.14
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-003
───╯
----- JAVAP -----
not generated
