rnsc/tests/snapshots/error-parser-type_hints-fieldref-no_operand_2_recovers.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class   @fieldref MyClass



badabadaboom ; <- still reported
----- STDERR -----
[E-014] Error: '@fieldref' type hint is missing its field name
   ╭─[ test_data/rns_integration/error/parser/type_hints/fieldref/no_operand_2_recovers.rns:1:10 ]
   │
 1 │ .class   @fieldref MyClass
   │          ────┬────        │ 
   │              ╰────────────── forces explicit field reference constant pool type
   │                           │ 
   │                           ╰─ but field name is missing
   │ 
   │ Help: Provide the value immediately after the hint:
   │       @fieldref <class_name> <field_name> <field_descriptor>
   │       
   │       For example:
   │       @fieldref java/lang/System out Ljava/io/PrintStream;
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-014
───╯
[E-007] Error: unexpected identifier class body
   ╭─[ test_data/rns_integration/error/parser/type_hints/fieldref/no_operand_2_recovers.rns:5:1 ]
   │
 5 │ badabadaboom ; <- still reported
   │ ──────┬─────  
   │       ╰─────── unexpected token
   │ 
   │ Help: Check the syntax of the class body and ensure all tokens are valid.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-007
───╯
----- JAVAP -----
not generated
